# mandelbrot

./: Cargo.toml  README.adoc  README.md
mandelbrot/: Cargo.toml  build.rs
mandelbrot/src/: main.rs
shader/: Cargo.toml
shader/src/: lib.rs
shared/: Cargo.toml
shared/src/: lib.rs
