[workspace]
resolver = "2"
members = ["mandelbrot", "shader", "shared"]

[profile.release]
incremental = true
codegen-units = 256

[profile.release.build-override]
opt-level = 3
incremental = true
codegen-units = 256

# [patch.crates-io]
# libm = { git = "https://github.com/rust-lang/libm", tag = "0.2.5" }
