[package]
name = "mandelbrot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.27.5"
anyhow = "1.0.66"

[dependencies.wgpu]
version = "0.14.0"
features = ["spirv"]

[dependencies.tokio]
version = "1.22.0"
features = ["macros", "rt-multi-thread"]

[dependencies.shared]
path = "../shared"

[build-dependencies.spirv-builder]
git = "https://github.com/EmbarkStudios/rust-gpu"
