[package]
name = "mandelbrot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.28.2"
anyhow = "1.0.69"
pollster = "0.3.0"

[dependencies.wgpu]
version = "0.15.1"
features = ["spirv"]

[dependencies.shared]
path = "../shared"

[build-dependencies.spirv-builder]
git = "https://github.com/EmbarkStudios/rust-gpu"
