[package]
name = "mandelbrot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.29.15"
anyhow = "1.0.81"
pollster = "0.3.0"
wgpu = { version = "0.19.3", features = ["spirv"] }
shared = { path = "../shared" }

[build-dependencies]
spirv-builder = "0.9.0"
